--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "crypto-js": "^3.1.9-1",
     "jwt-simple": "^0.5.5",
     "koa": "^2.6.1",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^4.0.7",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mongodb": "^3.1.10",
     "webpack": "^4.25.1"
   }
